Revert "Feature/issues 211 215 collaboration space"
